[tool.poetry]
name = "discord-bouncer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
stripe = "^9.4.0"
flask = "^3.0.3"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
py-cord = "^2.5.0"
google-cloud-firestore = "^2.16.0"
google-cloud-secret-manager = "^2.20.0"

[tool.poetry.scripts]
bouncer = "discord_bouncer.discord_bouncer:start_bouncer"
stripe = "discord_bouncer.checkout_session:handle_checkout_session"
flask = "discord_bouncer.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
