[tool.poetry]
name = "discord-bouncer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
stripe = "^9.4.0"
flask = "^3.0.3"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
py-cord = "^2.5.0"
google-cloud-firestore = "^2.16.0"
google-cloud-secret-manager = "^2.20.0"
apscheduler = "^3.10.4"

[tool.poetry.scripts]
bouncer = "discord_bouncer.discord_actions:start_bot"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
coverage = "^7.5.1"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning", 
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
